--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,3 +6,125 @@
     background-color: #f4ce14;
     list-style: none;
   }
+  main{
+    background-color: #495E57;
+  }
+main> .container{
+    display: grid;
+    grid-template-columns: 5% 40% 50%;
+    grid-template-rows: 400px;
+    grid-template-areas: "empty1" "titles" "image" "empty2";
+  }
+  #titles >h2{
+    color: #f4ce14;
+    font-family: "Markazi Text";
+    font-weight: 500;
+    font-size: 64px;
+    margin-top: 10px;
+  }
+  #titles >h4{
+    color: white;
+    font-family: "karla";
+    font-weight: 400;
+    font-size: 40px;
+    margin-top: -10px;
+  }
+  #titles >p{
+    color: white;
+    font-family: karla;
+    font-size: 18px;
+    font-weight: 500;
+    margin-top: 30px;
+  }
+button{
+    background-color: #f4ce14;
+    width: 325px;
+    height: 65px;
+    border-radius: 16px;
+    text-align: center;
+    color: black;
+    font-size: 20px;
+    font-weight: 700;
+}
+/* Home.css */
+#image> img{
+    position: relative;
+    margin-top: 30px;
+    height: 400px;
+    width: 700px;
+    border-radius: 20px;
+    margin-left: 80px;
+}
+#titles{
+    margin-left: 80px;
+}
+.specials{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100%;
+    grid-template-areas: "h2" "button";
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 50px;
+}
+.specials> button{
+    font-weight: 700;
+    font-size: 25px;
+    font: karla;
+}
+.specials> h2{
+    font-size: 50px;
+    font: 'markazi text';
+    font-weight: 700;
+}
+.spe{
+    margin-top: 40px;
+    margin-left: 40px;
+    margin-right: 40px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+    grid-gap: 50px;
+    grid-template-areas: "special1" "special2" "special3";
+}
+#inspec> .row{
+    background-color: #EDEFEE;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+}
+#inspec> .row >img{
+    width: 420px;
+    height: 250px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+#inspec> .row >p{
+    font: karla;
+    color: #495E57;
+    font-size: 20px;
+    font-weight: 500;
+}
+#inspec> .row >h2{
+    font-family: "Markazi text";
+    color: black;
+    font-size: 30px;
+    font-weight: 500;
+}
+h2{
+    text-align: center;
+    font-family: "Markazi text";
+    font-size: 50px;
+    font-weight: 700;
+    margin: 30px;
+}
+.testimonials{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: "test1" "test2"
+                            "test3" "test4";
+    grid-gap: 50px;
+    background-color: #495E57;
+}
