--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -1,9 +1,19 @@
 .test{
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 190px 440px;
+    grid-template-rows: 210px;
+    grid-template-areas: "image" "review";
+    text-align: center;
+    text-overflow: ellipsis;
+    grid-gap: 5px;
+    justify-content: space-evenly;
     align-items: center;
-    text-align: left;
 }
 img{
-    margin-left: 20px;
+    width: 140px;
+}
+.review{
+    font: karla;
+    font-size: 15px;
+    font-weight: 700;
 }
